<resources>
    <string name="app_name">spacy-food-components</string>
    <string name="all_price_mask">$%1$.2f</string>
    <string name="all_add_to_cart">Add to cart</string>
    <string name="all_save">Save</string>
    <string name="all_error">Request error! Something went wrong.</string>
    <string name="all_loading">Loading</string>
    <string name="all_success">Success!</string>

    <string name="main_fragment_tag">ProductListFragment</string>

    <string name="toolbar_back_btn_title">Back</string>

    <string name="product_list_title">What do you fancy eating today?</string>
    <string name="product_list_add_payment_method_btn_title">Add payment method</string>
    <string name="product_list_checkout_btn_title">Checkout</string>
    <string name="product_list_checkout_error_msg">Ooops! Seems you didn\'t choose any item yet…</string>

    <string name="product_details_title_mask">%1s\n(%2dg)</string>
    <string name="product_details_delivery_description">Delivery in 25–35 mins</string>

    <string name="credit_card_add_card_title">Add Card Number</string>
    <string name="credit_card_holder_hint">Cardholder name</string>
    <string name="credit_card_number_hint">Card number</string>
    <string name="credit_card_date_hint">Date</string>
    <string name="credit_card_cvc_hint">CVC</string>
    <string name="credit_card_no_data_error_msg">No data!</string>
    <string name="credit_card_card_name_field_name">card_name</string>
    <string name="credit_card_card_number_field_name">card_number</string>
    <string name="credit_card_card_date_field_name">card_expiration_date</string>
    <string name="credit_card_card_cvc_field_name">card_cvc</string>
    <string name="credit_card_successfully_added_msg">Card successfully added!</string>

    <string name="checkout_order_info_title">Order info</string>
    <string name="checkout_total_amount_title">Total amount</string>
    <string name="checkout_delivery_address_title">Delivery address</string>
    <string name="checkout_delivery_address_mock">2082 Gordon Street</string>
    <string name="checkout_pay_title">Pay with your visa</string>
    <string name="checkout_pay_card_mask">%1s **** **** %2s</string>
    <string name="checkout_pay_btn_title">Pay</string>

    <string name="checkout_complete_subtitle">Very Spacy Food</string>
    <string name="checkout_complete_order_id_mock">#1234567FRD</string>
</resources>