<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/includeCheckoutToolbar"
        layout="@layout/main_toolbar" />

    <View
        android:id="@+id/viewCheckoutToolbarDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/aliceBlue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/margin_padding_size_large"
            app:layout_constraintBottom_toTopOf="@+id/viewCheckoutOrderInfoDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:drawablePadding="@dimen/margin_padding_size_medium"
                android:gravity="center"
                android:text="@string/checkout_order_info_title"
                android:textColor="@color/grey3"
                app:autoSizeMaxTextSize="@dimen/text_size_xlarge"
                app:autoSizeMinTextSize="@dimen/text_size_medium"
                app:autoSizeTextType="uniform"
                app:drawableBottomCompat="@drawable/ic_fork_white_48dp"
                app:drawableTint="@color/grey3"
                app:layout_constraintBottom_toTopOf="@+id/viewCheckoutOrderInfoDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/checkout_total_amount_title"
                android:textColor="@color/grey3"
                app:autoSizeMaxTextSize="@dimen/text_size_medium"
                app:autoSizeMinTextSize="@dimen/text_size_micro"
                app:autoSizeTextType="uniform" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvCheckoutAmount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_padding_size_micro"
                android:layout_weight="1"
                android:gravity="center|top"
                android:textColor="@color/grey5"
                app:autoSizeMaxTextSize="@dimen/custom_text_size_large"
                app:autoSizeMinTextSize="@dimen/text_size_medium"
                app:autoSizeTextType="uniform"
                tools:text="$20.20" />
        </LinearLayout>

        <View
            android:id="@+id/viewCheckoutOrderInfoDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:background="@color/aliceBlue"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCheckoutDeliveryAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:gravity="center|bottom"
            android:text="@string/checkout_delivery_address_title"
            android:textColor="@color/grey3"
            android:textSize="@dimen/custom_text_size_medium"
            app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewCheckoutOrderInfoDivider"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginTop="@dimen/margin_padding_size_small"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"
            android:drawablePadding="@dimen/margin_padding_size_small"
            android:gravity="center|top"
            android:lines="@integer/singleLine"
            android:text="@string/checkout_delivery_address_mock"
            android:textColor="@color/grey5"
            android:textSize="@dimen/text_size_medium"
            app:drawableStartCompat="@drawable/ic_location_white_18dp"
            app:drawableTint="@color/grey5"
            app:layout_constraintBottom_toTopOf="@+id/viewCheckoutPayInfoDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtvCheckoutDeliveryAddressTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <View
            android:id="@+id/viewCheckoutPayInfoDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/aliceBlue"
            app:layout_constraintTop_toBottomOf="@id/guideline3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCheckoutPayTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_size_large"
            android:layout_marginTop="@dimen/margin_padding_size_large"
            android:layout_marginEnd="@dimen/margin_padding_size_large"
            android:drawablePadding="@dimen/margin_padding_size_medium"
            android:gravity="center"
            android:text="@string/checkout_pay_title"
            android:textColor="@color/grey3"
            android:textSize="@dimen/custom_text_size_medium"
            app:drawableBottomCompat="@drawable/ic_visa_card_white_48dp"
            app:drawableTint="@color/grey3"
            app:layout_constraintBottom_toTopOf="@+id/mtvCheckoutCardNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewCheckoutPayInfoDivider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCheckoutCardNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_padding_size_large"
            android:ellipsize="end"
            android:gravity="center|top"
            android:lines="@integer/singleLine"
            android:textColor="@color/grey3"
            app:autoSizeMaxTextSize="@dimen/text_size_xlarge"
            app:autoSizeMinTextSize="@dimen/text_size_micro"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtvCheckoutPayTitle"
            tools:text="4111 **** **** 1111" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCheckoutPay"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_medium"
        android:layout_marginEnd="@dimen/margin_padding_size_medium"
        android:layout_marginBottom="@dimen/margin_padding_size_small"
        android:text="@string/checkout_pay_btn_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>